Search implementation added and works